grundgerüst für website

--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/styles/style.css">
+    <link rel="stylesheet" href="/assets/styles/style-Projektbeschreibung.css">
     <title>anfassen-erfassen</title>
+    <script src="/assets/libraries/p5.min.js"></script>
 </head>
 
 <body>
-    <h1><span style="font-family:'Retalic_30_Th'">Anfassen</span> &#160;Erfassen</h1>
+
+    <div class="header">
+        <h1><span style="font-family:'Retalic_30_Lt'" class="main_title">Anfassen</span> &#160;Erfassen</h1>
+        <a href="Projektbeschreibung.html">Projektbeschreibung</a>
+        <a href="videos.html">Tracking-Videos</a>
+    </div>
+
+
+
+
+
+    <script src="assets/js/face_map.js"></script>
 </body>
 
 </html>
