Co-authored-by: annakleger <annakleger@users.noreply.github.com>

--- a/Projektbeschreibung.html
+++ b/Projektbeschreibung.html
@@ -11,6 +11,14 @@
 
 <body>
 
+    <div class="header">
+        <h1><span style="font-family:'Retalic_30_Lt'" class="main_title"><a href="index.html" id="anfassen_main">Anfassen</a></span> &#160;<a href="index.html" id="erfassen_main">Erfassen</a>
+        </h1>
+        <a href="#" id="current_link">Projektbeschreibung</a>
+        <a href="tracking-daten.html">Tracking-Daten</a>
+        <a href="videos.html">Tracking-Videos</a>
+    </div>
+
     <div class="container">
         <div class="item-left">
             <div class="nav">
@@ -69,14 +77,11 @@
 
         </div>
 
+
+
         <div class="content">
 
-            <div class="header">
-                <h1><span style="font-family:'Retalic_30_Lt'"><a href ="index.html" class="main_title">Anfassen</span> &#160;Erfassen</a>
-                </h1>
-                <a href="Projektbeschreibung.html" class="header_link">Projektbeschreibung</a>
-                <a href="#" class="header_link">Tracking-Videos</a>
-            </div>
+
             <!-- <div id="canvas_container"></div> -->
             <div class="content_projektbeschreibung">
                 <h2 id="Projektbeschreibung">Projektbeschreibung </h2>
