--- a/tracking-daten.html
+++ b/tracking-daten.html
@@ -5,25 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/styles/style.css">
-    <title>anfassen-erfassen</title>
-    <script src="/assets/libraries/p5.min.js"></script>
+    <title>Tracking-Daten</title>
+    <link rel="stylesheet" href="/assets/styles/style-Projektbeschreibung.css">
 </head>
 
 <body>
 
+
     <div class="header">
-        <h1><span style="font-family:'Retalic_30_Lt'" class="main_title">Anfassen</span> &#160;Erfassen</h1>
+        <h1><span style="font-family:'Retalic_30_Lt'" class="main_title"><a href="index.html" id="anfassen_main">Anfassen</a></span> &#160;<a href="index.html" id="erfassen_main">Erfassen</a>
+        </h1>
         <a href="Projektbeschreibung.html">Projektbeschreibung</a>
-        <a href="tracking-daten.html">Tracking-Daten</a>
+        <a href="#" id="current_link">Tracking-Daten</a>
         <a href="videos.html">Tracking-Videos</a>
     </div>
 
-
-
-
-
-    <script src="assets/js/face_map.js"></script>
 </body>
 
 </html>
