--- a/videos.html
+++ b/videos.html
@@ -12,10 +12,11 @@
 <body>
 
     <div class="header">
-        <h1><span style="font-family:'Retalic_30_Lt'"><a href ="index.html" class="main_title">Anfassen</span> &#160;Erfassen</a>
+        <h1><span style="font-family:'Retalic_30_Lt'" class="main_title"><a href="index.html" id="anfassen_main">Anfassen</a></span> &#160;<a href="index.html" id="erfassen_main">Erfassen</a>
         </h1>
         <a href="Projektbeschreibung.html">Projektbeschreibung</a>
-        <a href="videos.html">Tracking-Videos</a>
+        <a href="tracking-daten.html">Tracking-Daten</a>
+        <a href="#" id="current_link">Tracking-Videos</a>
     </div>
 
     <!-- <a href="index.html" id="nav_small">Zurück</a> -->
