navbar styling, link sites
Co-authored-by: annakleger <annakleger@users.noreply.github.com>

--- a/Projektbeschreibung.html
+++ b/Projektbeschreibung.html
@@ -15,6 +15,7 @@
         <h1><span style="font-family:'Retalic_30_Lt'" class="main_title"><a href="index.html" id="anfassen_main">Anfassen</a></span> &#160;<a href="index.html" id="erfassen_main">Erfassen</a>
         </h1>
         <a href="#" id="current_link">Projektbeschreibung</a>
+        <a href="gestaltungsprozess.html">Gestaltungsprozess</a>
         <a href="tracking-daten.html">Tracking-Daten</a>
         <a href="videos.html">Tracking-Videos</a>
     </div>
@@ -182,11 +183,37 @@
 
                         <img src="assets/img/Projektbeschreibung/BSP_Patterns_3.png " alt="Beispiel Haut " width="30% " class="img_haut"> </div>
 
+
+
                     <br>
                     <p>Auch wurde jedem definierten Handbereich eine bestimmte Farbe zugeordnet. Ähnliche Handbereiche wie beispielsweise Fingerkuppen oder Knöchel sind im selben Farbton gehalten. Die Regionen der linken und rechten Hand wurden in derselben
                         Farbpalette gestaltet. Zur unterscheidung von Links und Rechts wurde eine unterschiedliche Ausrichtung des Linienrasters gewählt. Die Diagonale der Linken Hand verläuft von Links oben nach rechts unten, die Darstellung der rechten
                         Hand verläuft von links unten nach rechts oben. Im Zusammenspiel ergeben die Patterns ein feingliedriges Raster aus sich überlagernden Konturen und Farben die ein individuelles Berührungs-Profil entstehen lassen und an die feinporige
                         Oberflächenstruktur der Haut erinnern. </p>
+
+                    <br>
+
+                    <div class="img_patterns_container">
+                        <img src="assets/img/patterns/patterns-01.png " alt="Beispiel Pattern " width="10%">
+
+                        <img src="assets/img/patterns/patterns-23.png " alt="Beispiel Pattern " width="10%">
+
+                        <img src="assets/img/patterns/patterns-05.png" alt="Beispiel Pattern " width="10%">
+
+                        <img src="assets/img/patterns/patterns-28.png " alt="Beispiel Pattern " width="10%">
+
+                        <img src="assets/img/patterns/patterns-10.png " alt="Beispiel Pattern " width="10%">
+
+                        <img src="assets/img/patterns/patterns-32.png " alt="Beispiel Pattern " width="10%">
+
+                        <img src="assets/img/patterns/patterns-15.png" alt="Beispiel Pattern " width="10%">
+
+                        <img src="assets/img/patterns/patterns-38.png " alt="Beispiel Pattern " width="10%">
+
+                        <img src="assets/img/patterns/patterns-20.png" alt="Beispiel Pattern " width="10%">
+
+
+                    </div>
 
                     <h3 id="Analoge-Visualisierung ">Analoge Visualisierung: berühren </h3>
                     <p>Während auf der Webiste die Berührten Stellen im Gesicht und damit dem «berührt werden» im Vordergrund stehen, beschäftigt sich die analoge Visualisierung mehr mit dem «berühren». Konkret: Womit Berühren wir unser Gesicht. Die in der
