--- a/videos.html
+++ b/videos.html
@@ -15,6 +15,7 @@
         <h1><span style="font-family:'Retalic_30_Lt'" class="main_title"><a href="index.html" id="anfassen_main">Anfassen</a></span> &#160;<a href="index.html" id="erfassen_main">Erfassen</a>
         </h1>
         <a href="Projektbeschreibung.html">Projektbeschreibung</a>
+        <a href="gestaltungsprozess.html">Gestaltungsprozess</a>
         <a href="tracking-daten.html">Tracking-Daten</a>
         <a href="#" id="current_link">Tracking-Videos</a>
     </div>
