--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body>
 
     <div class="header">
-        <h1><span style="font-family:'Retalic_30_Lt'" class="main_title">Anfassen</span> &#160;Erfassen</h1>
+        <h1><span style="font-family:'Retalic_30_Lt'" class="main_title"><a href="index.html" id="anfassen_main">Anfassen</a></span> &#160;<a href="index.html" id="erfassen_main">Erfassen</a>
+        </h1>
         <a href="Projektbeschreibung.html">Projektbeschreibung</a>
+        <a href="gestaltungsprozess.html">Gestaltungsprozess</a>
         <a href="tracking-daten.html">Tracking-Daten</a>
         <a href="videos.html">Tracking-Videos</a>
     </div>
